Adjusted test announcements